fixed auto-filling url from title in editor. Fixed username alignment in owner menu.

--- a/libsrc/scss/nav.scss
+++ b/libsrc/scss/nav.scss
@@ -442,6 +442,7 @@ body.frame{
         max-width: 135px;
         overflow: hidden;
         display: inline-block;
+        vertical-align: middle;
     }
 }
 
